code formatting, added mandatory Powered by Darksky.net link :zap:

--- a/source/modules/home/home.html
+++ b/source/modules/home/home.html
@@ -54,6 +54,10 @@
       </ol>
     </div>
 
+    <div class="powered-by">
+      <a href="https://darksky.net/poweredby/" title="Weather forecasts are powered by DarkSky.net">Powered by DarkSky.net</a>
+    </div>
+
   </div>
 
   <div class="controls">
